--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:onClick="reset"
-        android:text="RESET" />
+        android:text="RESET"
+        android:layout_marginBottom="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
